--- a/colors.html
+++ b/colors.html
@@ -41,164 +41,158 @@
 				<article id="handbook-colors" class="page">
 
 					<header class="page-header">
-						<h1>Color Guide</h1>
-						<p>Because the world is better in technicolor</p>
+						<h1>Colors</h1>
+						<p>They were the first thing to be documented in the Field Guide in an attempt to achieve a more consistent Design Language for WordPress.com. They are the first thing we notice about a brand and can provide the most emotional connection to it. Let's cherish them and treat them with the importance they deserve.</p>
 					</header>
 
-					<section class="pattern-group">
-						<article class="pattern">
-							<h3 id="colors-wpcom-blue">WordPress.com Blue</h3>
-							<p>The main color. Derived originally from the core WordPress blues, but evolved into a much brighter and happy color</p>
+					<section id="colors-primary" class="colors-primary article-section">
+						<h2>WordPress.com Blue</h2>
+						<p>The main color. Derived originally from the core WordPress blues, but evolved into a much brighter and happy color</p>
 
-							<section class="swatches col-1">
-								<div class="swatch wpcom-blue">
-									<ul class="swatch-details">
-										<li><strong>WordPress.com Blue</strong></li>
-										<li>#0087be</li>
-										<li>rgb(0,135,190)</li>
-										<!--
-										<li>$wordpress-blue</li>
-										<li>PMS 7460</li>
-										<li>CMYK (Coated) 100, 6, 2, 10</li>
-										<li>CMYK (Uncoated) 100, 0, 10, 0</li>
-										-->
-									</ul>
-								</div>
-							</section>
-						</article>
+						<section class="swatches col-1">
+							<div class="swatch wpcom-blue">
+								<ul class="swatch-details">
+									<li><strong>WordPress.com Blue</strong></li>
+									<li>#0087be</li>
+									<li>rgb(0,135,190)</li>
+									<!--
+									<li>$wordpress-blue</li>
+									<li>PMS 7460</li>
+									<li>CMYK (Coated) 100, 6, 2, 10</li>
+									<li>CMYK (Uncoated) 100, 0, 10, 0</li>
+									-->
+								</ul>
+							</div>
+						</section>
+					</section><!-- #colors-primary -->
 
-						<article class="pattern">
-							<h3 id="colors-complimentary-blues">Complimentary Blues</h3>
-							<p>These are extra blues for use in situations where the base blues are not a good fit. They work especially well for large blocks of color or other accents.</p>
+					<section id="colors-complementary" class="colors-complementary article-section">
+						<h2>Complimentary Blues</h2>
+						<p>These complementary blues provide a set of secondary options for elements where the primary blue (or it's derivates) isn't appropriate. A good example is a large color block, like a background, might work better with a Medium Blue, than with the Primary WordPress.com blue.</p>
 
-							<section class="swatches col-3">
-								<div class="swatch light-blue">
-									<ul class="swatch-details">
-										<li><strong>Light Blue</strong></li>
-										<li>#78dcfa</li>
-										<li>rgb(120,220,250)</li>
-									</ul>
-								</div>
+						<section class="swatches col-3">
+							<div class="swatch light-blue">
+								<ul class="swatch-details">
+									<li><strong>Light Blue</strong></li>
+									<li>#78dcfa</li>
+									<li>rgb(120,220,250)</li>
+								</ul>
+							</div>
 
-								<div class="swatch medium-blue">
-									<ul class="swatch-details">
-										<li><strong>Medium Blue</strong></li>
-										<li>#00aadc</li>
-										<li>rgba(0,170,220)</li>
-									</ul>
-								</div>
+							<div class="swatch medium-blue">
+								<ul class="swatch-details">
+									<li><strong>Medium Blue</strong></li>
+									<li>#00aadc</li>
+									<li>rgba(0,170,220)</li>
+								</ul>
+							</div>
 
-								<div class="swatch dark-blue">
-									<ul class="swatch-details">
-										<li><strong>Dark Blue</strong></li>
-										<li>#005082</li>
-										<li>rgb(0,80,130)</li>
-									</ul>
-								</div>
-							</section>
-						</article>
+							<div class="swatch dark-blue">
+								<ul class="swatch-details">
+									<li><strong>Dark Blue</strong></li>
+									<li>#005082</li>
+									<li>rgb(0,80,130)</li>
+								</ul>
+							</div>
+						</section>
+					</section><!-- #colors-complementary -->
 
-						<article class="pattern">
-							<h3 id="colors-grays">Grays</h3>
-							<p>Grey, Gray, Cinza, Gris, Nezumi-iro &mdash; it blends.</p>
+					<section id="colors-grays" class="colors-grays article-section">
+						<h2>Grays</h2>
+						<p>Grey, Gray, Cinza, Gris, Nezumi-iro &mdash; they blend! The new incarnation of grays bring a slight blue hue to them, to bring our brand together.</p>
 
-							<section class="swatches col-4">
-								<div class="swatch ultra-light-gray">
-									<ul class="swatch-details">
-										<li><strong>Ultra Light Gray</strong></li>
-										<li><small>sidebar background</small></li>
-										<li>#f4f8fa</li>
-										<li>rgb(244,248,250)</li>
-									</ul>
-								</div>
+						<section class="swatches col-4">
+							<div class="swatch ultra-light-gray">
+								<ul class="swatch-details">
+									<li><strong>Ultra Light Gray</strong></li>
+									<li><small>sidebar background</small></li>
+									<li>#f4f8fa</li>
+									<li>rgb(244,248,250)</li>
+								</ul>
+							</div>
 
-								<div class="swatch light-gray">
-									<ul class="swatch-details">
-										<li><strong>Light Gray</strong></li>
-										<li><small>body background</small></li>
-										<li>#e8f0f5</li>
-										<li>rgb(232,240,247)</li>
-									</ul>
-								</div>
+							<div class="swatch light-gray">
+								<ul class="swatch-details">
+									<li><strong>Light Gray</strong></li>
+									<li><small>body background</small></li>
+									<li>#e8f0f5</li>
+									<li>rgb(232,240,247)</li>
+								</ul>
+							</div>
 
-								<div class="swatch medium-gray">
-									<ul class="swatch-details">
-										<li><strong>Medium Gray</strong></li>
-										<li><small>shadows and rules</small></li>
-										<li>#d2dee6</li>
-										<li>rgb(210,222,230)</li>
-									</ul>
-								</div>
+							<div class="swatch medium-gray">
+								<ul class="swatch-details">
+									<li><strong>Medium Gray</strong></li>
+									<li><small>shadows and rules</small></li>
+									<li>#d2dee6</li>
+									<li>rgb(210,222,230)</li>
+								</ul>
+							</div>
 
-								<div class="swatch dark-gray">
-									<ul class="swatch-details">
-										<li><strong>Dark Gray</strong></li>
-										<li><small>007</small></li>
-										<li>#324155</li>
-										<li>rgb(50,65,85)</li>
-									</ul>
-								</div>
-							</section>
-						</article>
+							<div class="swatch dark-gray">
+								<ul class="swatch-details">
+									<li><strong>Dark Gray</strong></li>
+									<li><small>007</small></li>
+									<li>#324155</li>
+									<li>rgb(50,65,85)</li>
+								</ul>
+							</div>
+						</section>
+					</section><!-- #colors-grays -->
 
-						<article class="pattern">
-							<h3 id="colors-oranges">Oranges</h3>
-							<p>Useful for hovers and interactions.</p>
+					<section id="colors-oranges" class="colors-oranges article-section">
+						<h2>Oranges</h2>
+						<p>The happiest of our colors. They should be useful for hovers, interactions, and call-to-actions.</p>
 
-							<section class="swatches col-2">
-								<div class="swatch fire-orange">
-									<ul class="swatch-details">
-										<li><strong>Fire Orange</strong></li>
-										<li>#d54e21</li>
-										<li>rgb(213,78,33)</li>
-									</ul>
-								</div>
+						<section class="swatches col-2">
+							<div class="swatch fire-orange">
+								<ul class="swatch-details">
+									<li><strong>Fire Orange</strong></li>
+									<li>#d54e21</li>
+									<li>rgb(213,78,33)</li>
+								</ul>
+							</div>
 
-								<div class="swatch jazzy-orange">
-									<ul class="swatch-details">
-										<li><strong>Jazzy Orange</strong></li>
-										<li>#f0821e</li>
-										<li>rgb(240,130,30)</li>
-									</ul>
-								</div>
-							</section>
-						</article>
+							<div class="swatch jazzy-orange">
+								<ul class="swatch-details">
+									<li><strong>Jazzy Orange</strong></li>
+									<li>#f0821e</li>
+									<li>rgb(240,130,30)</li>
+								</ul>
+							</div>
+						</section>						
+					</section><!-- #colors-oranges -->
 
-						<article class="pattern">
-							<h3 id="colors-alerts">Validations and Alerts</h3>
-							<p>These colors are useful for form field validation, alerts, warnings, and pats on the back. Not intended for large blocks of color. Works great with Noticons! Optimized for color blindness.</p>
+					<section id="colors-alerts" class="colors-alerts article-section">
+						<h2>Validations and Alerts</h2>
+						<p>These colors are useful for form field validation, alerts, warnings, and pats on the back. Not intended for large blocks of color. Works great with Noticons! Optimized for color blindness.</p>
 
-							<section class="swatches col-3">
-								<div class="swatch valid-green">
-									<ul class="swatch-details">
-										<li><strong>Valid Green</strong></li>
-										<li>#4cb420</li>
-										<li>rgb(76,180,32)</li>
-									</ul>
-								</div>
+						<section class="swatches col-3">
+							<div class="swatch valid-green">
+								<ul class="swatch-details">
+									<li><strong>Valid Green</strong></li>
+									<li>#4cb420</li>
+									<li>rgb(76,180,32)</li>
+								</ul>
+							</div>
 
-								<div class="swatch warning-yellow">
-									<ul class="swatch-details">
-										<li><strong>Warning Yellow</strong></li>
-										<li>#ffba00</li>
-										<li>rgb(255,186,0)</li>
-									</ul>
-								</div>
+							<div class="swatch warning-yellow">
+								<ul class="swatch-details">
+									<li><strong>Warning Yellow</strong></li>
+									<li>#ffba00</li>
+									<li>rgb(255,186,0)</li>
+								</ul>
+							</div>
 
-								<div class="swatch error-red">
-									<ul class="swatch-details">
-										<li><strong>Error Red</strong></li>
-										<li>#dd3d36</li>
-										<li>rgb(221,61,54)</li>
-									</ul>
-								</div>
-							</section>
-						</article>
-					</section>
-					
-					<hr />
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">0</strong>g elit, <strong style="color:orange;">0</strong>ed do eiusmod <strong style="color:red;">0</strong>empor incididunt ut labore et dolore et magna aliqua.<br /> <strong>This paragraph is used to measure the line lenght for optimal characters per line.</strong></p>
+							<div class="swatch error-red">
+								<ul class="swatch-details">
+									<li><strong>Error Red</strong></li>
+									<li>#dd3d36</li>
+									<li>rgb(221,61,54)</li>
+								</ul>
+							</div>
+						</section>
+					</section><!-- #colors-alerts -->
 
 				</article>
 				<nav id="page-navigation" class="page-links">
