--- a/typography.html
+++ b/typography.html
@@ -42,8 +42,52 @@
 
 					<header class="page-header">
 						<h1>Typography</h1>
-						<p>WordPress is all about spreading ideas, freedom of speech. We can only achieve that with top-notch typography. In this long page, we'll explore the guidelines for consistent typography on WordPress.com</p>
+						<p>WordPress is all about spreading ideas, freedom of speech, specifically through the written word. On this page, we'll explore the guidelines for consistent typography on WordPress.com</p>
 					</header>
+
+					<section id="typography-typefaces" class="typography-typefaces article-section">
+						<h2>Typefaces</h2>
+						<p>WordPress.com uses two typefaces: <strong>Open Sans</strong> and <strong>Merriweather</strong>. These two faces, if used correctly, should be another vital element of our design language, giving a sense of familiarity to the users.</p>
+
+						<h3>Open Sans</h3>
+						<p>A typeface designed by XXX for XXX, is a highly versatile typeface that has inspired us greatly. The name itself aligns well with our values as a company. This typeface has gained a lot of popularity online with its availability on Google Fonts, so we might consider a more tailored approach in the future. But for now, Open Sans is Queen: it's in our Logotype, it's our text face.</p>
+
+						<h3>Merriweather</h3>
+						<p>This gracious typeface by Eben Sorkin started being used after very many typesetting explorations. Eventually we all agreed Merriweather was the winner. Merriweather features a very large x height, slightly condensed letterforms, a mild diagonal stress, sturdy serifs and open forms. It should be in all titles and potentially in some blockquotes.</p>
+					</section><!-- #typography-typefaces -->
+
+					<section id="typography-weights" class="typography-weights article-section">
+						<h2>Weights and Styles</h2>
+						<p>We are very specific as to what weights to use of our glorious typefaces. Only in this way can we assure that our design language is consistent. We use multiple weights from Open Sans: Light, Regular, Semi-bold, and Bold. As for Merriweather, we stick to the Bold weight.</p>
+					</section><!-- #typography-weights -->
+
+
+					<section id="typography-xxx" class="typography-xxx article-section">
+						<h2>xxx</h2>
+
+						
+						<figure class="sample">	
+							<img src="images/xxx.svg">
+						</figure>
+					</section><!-- #typography-xxx -->
+
+					<ul>
+						<li>Typefaces</li>
+						<li>Weights</li>
+						<li>Modular Scales / Sizes</li>
+						<li>Typesetting</li>
+					</ul>
+
+
+
+
+
+
+
+
+
+
+
 					
 					<figure class="blockquote">
 						<blockquote cite="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/088179211X">
