--- a/metrics.html
+++ b/metrics.html
@@ -45,13 +45,13 @@
 						<p>This is where the isht gets realz...</p>
 					</header>
 					
-					<p>Lorem ipsum dolor sit amet, consectetur adipisici<strong style="color:green;">n</strong>g elit, <strong style="color:yellow;">s</strong>ed do eiusmod <strong style="color:red;">t</strong>empor incididunt ut labore et dolore magna aliqua.</p>
+					<p>We're still writing this one, so hang in there.</p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
 						<li class="page-links-previous"><a href="icons.html">Icons</a></li>
-						<li class="page-links-next"><a href="components.html">Components</a></li>
+						<li class="page-links-next"><a href="patterns.html">Patterns</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
 			</main><!-- #main -->
