--- a/icons.html
+++ b/icons.html
@@ -45,13 +45,15 @@
 						<p>Icons carry a tremendous weight in conveying branding and design language. They give a UI it's most recognizable elements of identity when used correctly.</p>
 					</header>
 
-					<p>Right now we are in flux: In a persuit of an evolved icon set for WordPress.com.</p>
+					<p>Right now we are in flux: In a persuit of an evolved icon set for WordPress.com. In the meantime, these are the available icon sets:</p>
 
 					<ul>
 						<li><a href="http://wordpress.com/i/noticons/example.html">Noticons</a> (note-icons, or not-icons) is our WordPress.com icon font. It contains every icon &ldquo;Genericons&rdquo; has, plus a couple of WordPress.com specific ones. You can use Genericons for themes and other projects. <strong>(Please do not use Noticons outside of their intended 16px font-size or 2x multiples thereof (32px, 64px). Even fonts look fuzzy outside of their pixel grid.)</strong></li>
 						<li><a href="http://genericons.com">Genericons</a> is an open-source icon font. Most of it is included in Noticons. Useful for themes and non-WordPress.com stuff.</li>
 						<li><a href="http://melchoyce.github.io/dashicons/">Dashicons</a> is the official icon font of the WordPress admin as of 3.8.</li>
 					</ul>
+
+					<p>If you'd like to join the icon revolution, head over to the <a href="https://github.com/Automattic/Gridicons">Gridicons github repo</a>, where the future of the WordPress.com icons is being crafted.</p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
