--- a/logo.html
+++ b/logo.html
@@ -42,7 +42,7 @@
 
 					<header class="page-header">
 						<h1>Logotype</h1>
-						<p>The WordPress logotype is composed of the &quot;W&quot; mark and type. Carefully crafted proportions and positioning of these two elements in relation to each other are the essencial guideline to take from this page.</p>
+						<p>The WordPress logotype is composed of the &quot;W&quot; mark and type. Carefully crafted proportions and positioning of these two elements in relation to each other are the essential guideline to take from this page.</p>
 					</header>
 
 					<section id="logotype-history" class="logotype-history article-section">
@@ -54,7 +54,7 @@
 							<img src="images/logo-history-wporg.svg">
 						</figure>
 						
-						<p>WordPress.com has used a variation of the core logotype since it's inception. In 2013, with the adoption of &quot;<a href="https://www.google.com/fonts/specimen/Open+Sans" title="Google Fonts - Open Sans">Open Sans</a>&quot; as the text typeface, the logotype embraced it as well. We also decided to exclusively use the inverted logo &quot;W&quot; mark when representing WordPress.com.</p>
+						<p>WordPress.com has used a variation of the core logotype since it's inception. In 2013, with the adoption of &quot;<a href="https://www.google.com/fonts/specimen/Open+Sans" title="Google Fonts - Open Sans">Open Sans</a>&quot; as the text typeface, the logotype embraced it as well. We also decided to exclusively use the inverted &quot;W&quot; mark (a.k.a. the version without the outside ring) when representing WordPress.com.</p>
 
 						<figure class="sample">	
 							<img src="images/logo-wpcom.svg">
@@ -68,7 +68,7 @@
 					<section id="logotype-metrics" class="logotype-metrics article-section">
 						<h2>Metrics</h2>
 
-						<p>The metrics derive from the element that stared it all: the inverted &quot;W&quot; mark. From there, a grid was set, defining all the other proportions. That includes the <em>safety margin</em> around the logotype - magic whitespace that protects our brand from the world. The <em>safety margin</em> should always be half the size of the &quot;W&quot; mark, unless otherwise&nbsp;specified.</p>
+						<p>The metrics derive from the element that started it all: the inverted &quot;W&quot; mark. From there, a grid was set, defining all the other proportions. That includes the <em>safety margin</em> around the logotype - magic whitespace that protects our brand from the world. The <em>safety margin</em> should always be half the size of the &quot;W&quot; mark, unless otherwise&nbsp;specified.</p>
 
 						<figure class="sample">	
 							<img src="images/logo-metrics.svg">
