--- a/typography.html
+++ b/typography.html
@@ -72,7 +72,7 @@
 							<figcaption><cite class="author"><small><a href="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/088179211X">Robert Bringhurst</a></small></cite></figcaption>
 						</figure>
 
-						<p>An harmonic ratio helps in creating a more harmonious design and also helps standardize stuff. If we use the same scale across WordPress.com, things feel more cohesive - it's as much about consistency as it is about harmony: instead of using arbitraty numbers, we conform to a harmonic scale.</p>
+						<p>An harmonic ratio helps in creating a more harmonious design and also helps standardize stuff. If we use the same scale across WordPress.com, things feel more cohesive - it's as much about consistency as it is about harmony: instead of using arbitrary numbers, we conform to a harmonic scale.</p>
 
 						<h3>Resources on Modular Scales:</h3>
 						<ul>
