--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					
 					<p>In the history of WordPress.com there has never been an underlying design thinking - we're a development-driven company, and it shows. Over the last two years we've attemptend to document and apply some guidelines for consistency across WordPress.com pages and sites to a certain degree of success. This handbook aims to further that engagement on design consistency and brand focus.</p>
 					
-					<p>In this guide we'll go through most elements that can be abstracted — like our brand logotype, colors, typography, iconography, and even some practical example. All that you'll see written here is meant to serve as a guideline. Ultimately you should use your design experience to make decisions, but keeping in mind that there should be concrete reasons to break these rules.</p>
+					<p>In this guide we'll go through most elements that can be abstracted — like our brand logotype, colors, typography, iconography, and even some practical examples. All that you'll see written here is meant to serve as a guideline. Ultimately you should use your design experience to make decisions, but keeping in mind that there should be concrete reasons to break these rules.</p>
 
 					<p>Let's get started!<p>
 
