Style update on page navigation links

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
 					
 					<p>In this guide we'll go through most elements that can be abstracted — like our brand logotype, colors, typography, iconography, and even some practical examples. All that you'll see written here is meant to serve as a guideline. Ultimately you should use your design experience to make decisions, but keeping in mind that there should be concrete reasons to break these rules.</p>
 
-					<p>Let's get started!<p>
+					<p><a href="logo.html">Let's get started!</a><p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
-						<li class="page-links-previous"><a href="index.html">Introduction</a></li>
 						<li class="page-links-next"><a href="logo.html">Logotype</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
