Updates to the Handbook

--- a/colors.html
+++ b/colors.html
@@ -42,12 +42,12 @@
 
 					<header class="page-header">
 						<h1>Colors</h1>
-						<p>They were the first thing to be documented in the Field Guide in an attempt to achieve a more consistent Design Language for WordPress.com. They are the first thing we notice about a brand and can provide the most emotional connection to it. Let's cherish them and treat them with the importance they deserve.</p>
+						<p>They were the first thing to be documented internally in an attempt to achieve a more consistent Design Language for WordPress.com. Colors are one of the most notable aspects in brand recognition.</p>
 					</header>
 
 					<section id="colors-primary" class="colors-primary article-section">
 						<h2>WordPress.com Blue</h2>
-						<p>The main color. Derived originally from the core WordPress blues, but evolved into a much brighter and happy color</p>
+						<p>The main color. Derived originally from the core WordPress blues, but evolved into a much brighter and saturated color.</p>
 
 						<section class="swatches col-1">
 							<div class="swatch wpcom-blue">
@@ -67,7 +67,7 @@
 					</section><!-- #colors-primary -->
 
 					<section id="colors-complementary" class="colors-complementary article-section">
-						<h2>Complimentary Blues</h2>
+						<h2>Secondary Blues</h2>
 						<p>These complementary blues provide a set of secondary options for elements where the primary blue (or it's derivates) isn't appropriate. A good example is a large color block, like a background, might work better with a Medium Blue, than with the Primary WordPress.com blue.</p>
 
 						<section class="swatches col-3">
@@ -101,7 +101,7 @@
 						<h2>Grays</h2>
 						<p>Grey, Gray, Cinza, Gris, Nezumi-iro &mdash; they blend! The new incarnation of grays bring a slight blue hue to them, to bring our brand together.</p>
 
-						<section class="swatches col-4">
+						<section class="swatches col-3">
 							<div class="swatch ultra-light-gray">
 								<ul class="swatch-details">
 									<li><strong>Ultra Light Gray</strong></li>
@@ -126,6 +126,22 @@
 									<li><small>shadows and rules</small></li>
 									<li>#d2dee6</li>
 									<li>rgb(210,222,230)</li>
+								</ul>
+							</div>
+
+							<div class="swatch medium-gray-darker">
+								<ul class="swatch-details">
+									<li><strong>Medium Gray Darker</strong></li>
+									<li>#b1c6d4</li>
+									<li>rgb(177,198,212)</li>
+								</ul>
+							</div>
+
+							<div class="swatch medium-gray-darkerer">
+								<ul class="swatch-details">
+									<li><strong>Medium Gray Darkerer</strong></li>
+									<li>#90aec2</li>
+									<li>rgb(144,174,194)</li>
 								</ul>
 							</div>
 
@@ -160,7 +176,7 @@
 									<li>rgb(240,130,30)</li>
 								</ul>
 							</div>
-						</section>						
+						</section>
 					</section><!-- #colors-oranges -->
 
 					<section id="colors-alerts" class="colors-alerts article-section">
