--- a/typography.html
+++ b/typography.html
@@ -74,6 +74,51 @@
 
 						<p>An harmonic ratio helps in creating a more harmonious design and also helps standardize stuff. If we use the same scale across WordPress.com, things feel more cohesive - it's as much about consistency as it is about harmony: instead of using arbitrary numbers, we conform to a harmonic scale.</p>
 
+						<p>We use a double strand Perfect Fift scale based on the ideal text size of 16px and with the secondary important number 14px. This forms, roughly, the following scale:</p>
+
+						<table>
+							<tr>
+								<th>Pixels</th>
+								<th>Ems</th>
+							</tr>
+							<tr>
+								<td>54</td>
+								<td>3.375</td>
+							</tr>
+							<tr>
+								<td>47</td>
+								<td>2.953</td>
+							</tr>
+							<tr>
+								<td>36</td>
+								<td>2.25</td>
+							</tr>
+							<tr>
+								<td>32</td>
+								<td>1.969</td>
+							</tr>
+							<tr>
+								<td>24</td>
+								<td>1.5</td>
+							</tr>
+							<tr>
+								<td>21</td>
+								<td>1.313</td>
+							</tr>
+							<tr>
+								<td>16</td>
+								<td>1</td>
+							</tr>
+							<tr>
+								<td>14</td>
+								<td>0.875</td>
+							</tr>
+							<tr>
+								<td>11</td>
+								<td>0.667</td>
+							</tr>
+						</table>
+
 						<h3>Resources on Modular Scales:</h3>
 						<ul>
 							<li><a href="http://vimeo.com/17079380">More Perfect Typography (Video)</a>, by Tim Brown (Highly recomended)</li>
