Update to URL structure, remove of .js links

--- a/colors/index.html
+++ b/colors/index.html
@@ -6,19 +6,19 @@
 		<title>Colors | WordPress.com Design Handbook</title>
 		<meta name="description" content="WordPress.com Design Handbook">
 		<meta name="viewport" content="width=device-width">
-		<link rel='stylesheet' href='css/style.css'>
-		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
+		<link rel='stylesheet' href='../css/style.css'>
+		<script src='../js/vendor/modernizr-2.6.2.min.js'></script>
 
 		<link rel="icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" sizes="16x16" />
 
-		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Merriweather:700|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 
 		<header id="masthead" class="site-header" role="banner">
 			<div class="site-branding">
-				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com <span class="design-handbook">Design Handbook</span></a></h1>
+				<h1 class="site-title"><a href="../index.html" rel="home">WordPress.com <span class="design-handbook">Design Handbook</span></a></h1>
 			</div>
 		</header><!-- #masthead -->
 
@@ -27,13 +27,13 @@
 			<nav id="site-navigation" class="main-navigation" role="navigation">
 				<button class="menu-toggle">Navigation</button>
 				<ul>
-					<li><a href="index.html">Introduction</a></li>
-					<li><a href="logo.html">Logotype</a></li>
-					<li class="current"><a href="colors.html">Colors</a></li>
-					<li><a href="typography.html">Typography</a></li>
-					<li><a href="icons.html">Iconography</a></li>
-					<li><a href="metrics.html">Metrics</a></li>
-					<li><a href="patterns.html">Patterns</a></li>
+					<li><a href="../index.html">Introduction</a></li>
+					<li><a href="../logotype/">Logotype</a></li>
+					<li class="current"><a href="../colors/">Colors</a></li>
+					<li><a href="../typography/">Typography</a></li>
+					<li><a href="../iconography/">Iconography</a></li>
+					<li><a href="../metrics/">Metrics</a></li>
+					<li><a href="../patterns/">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
@@ -213,8 +213,8 @@
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
-						<li class="page-links-previous"><a href="logo.html">Logotype</a></li>
-						<li class="page-links-next"><a href="typography.html">Typography</a></li>
+						<li class="page-links-previous"><a href="../logotype/">Logotype</a></li>
+						<li class="page-links-next"><a href="../typography/">Typography</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
 			</main><!-- #main -->
@@ -222,10 +222,5 @@
 		</div><!-- #content -->
 
 
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-		<script src="js/vendor/rainbow.min.js"></script>
-		<script src="js/main.js"></script>
 	</body>
 </html>
