--- a/logotype/index.html
+++ b/logotype/index.html
@@ -6,19 +6,19 @@
 		<title>Logotype | WordPress.com Design Handbook</title>
 		<meta name="description" content="WordPress.com Design Handbook">
 		<meta name="viewport" content="width=device-width">
-		<link rel='stylesheet' href='css/style.css'>
-		<script src='js/vendor/modernizr-2.6.2.min.js'></script>
+		<link rel='stylesheet' href='../css/style.css'>
+		<script src='../js/vendor/modernizr-2.6.2.min.js'></script>
 
 		<link rel="icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" sizes="16x16" />
 
-		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Merriweather:700|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
 
 		<header id="masthead" class="site-header" role="banner">
 			<div class="site-branding">
-				<h1 class="site-title"><a href="index.html" rel="home">WordPress.com <span class="design-handbook">Design Handbook</span></a></h1>
+				<h1 class="site-title"><a href="../index.html" rel="home">WordPress.com <span class="design-handbook">Design Handbook</span></a></h1>
 			</div>
 		</header><!-- #masthead -->
 
@@ -27,13 +27,13 @@
 			<nav id="site-navigation" class="main-navigation" role="navigation">
 				<button class="menu-toggle">Navigation</button>
 				<ul>
-					<li><a href="index.html">Introduction</a></li>
-					<li class="current"><a href="logo.html">Logotype</a></li>
-					<li><a href="colors.html">Colors</a></li>
-					<li><a href="typography.html">Typography</a></li>
-					<li><a href="icons.html">Iconography</a></li>
-					<li><a href="metrics.html">Metrics</a></li>
-					<li><a href="patterns.html">Patterns</a></li>
+					<li><a href="../index.html">Introduction</a></li>
+					<li class="current"><a href="../logotype/">Logotype</a></li>
+					<li><a href="../colors/">Colors</a></li>
+					<li><a href="../typography/">Typography</a></li>
+					<li><a href="../iconography/">Iconography</a></li>
+					<li><a href="../metrics/">Metrics</a></li>
+					<li><a href="../patterns/">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
@@ -50,17 +50,17 @@
 
 						<p>The WordPress logo was created in early 2005 by Jason Santa Maria for the WordPress open source core project. He used two Emigre typefaces for the logo: &quot;<a href="http://www.myfonts.com/fonts/emigre/mrs-eaves-ot/small-caps-ot/" title="Emigre - Mrs. Eaves Samll Caps">Mrs. Eaves Small Caps</a>&quot; for the logotype, and &quot;<a href="http://www.myfonts.com/fonts/emigre/dalliance-ot/roman/glyphs.html#glyphs/322943/77" title="Emigre - Delliance">Dalliance</a>&quot; as influence for the &quot;W&quot; mark. The design was later visually refined by our very own Matt Miklic (formerly know as Matt Thomas, or MT) - the first designer at Automattic who helped shape the WordPress brand from very early on.</p>
 
-						<figure class="sample">	
+						<figure class="sample">
 							<img src="images/logo-history-wporg.svg">
 						</figure>
-						
+
 						<p>WordPress.com has used a variation of the core logotype since it's inception. In 2013, with the adoption of &quot;<a href="https://www.google.com/fonts/specimen/Open+Sans" title="Google Fonts - Open Sans">Open Sans</a>&quot; as the text typeface, the logotype embraced it as well. We also decided to exclusively use the inverted &quot;W&quot; mark (a.k.a. the version without the outside ring) when representing WordPress.com.</p>
 
-						<figure class="sample">	
+						<figure class="sample">
 							<img src="images/logo-wpcom.svg">
 						</figure>
 
-						<figure class="sample">	
+						<figure class="sample">
 							<img src="images/logo-wpcom-vertical.svg">
 						</figure>
 					</section>
@@ -70,7 +70,7 @@
 
 						<p>The metrics derive from the element that started it all: the inverted &quot;W&quot; mark. From there, a grid was set, defining all the other proportions. That includes the <em>safety margin</em> around the logotype - magic whitespace that protects our brand from the world. The <em>safety margin</em> should always be half the size of the &quot;W&quot; mark, unless otherwise&nbsp;specified.</p>
 
-						<figure class="sample">	
+						<figure class="sample">
 							<img src="images/logo-metrics.svg">
 						</figure>
 
@@ -78,7 +78,7 @@
 
 						<hr />
 
-						<p>More on this on the <a href="metrics.html">Metrics</a> section of this Handbook.</p>
+						<p>More on this on the <a href="metrics/">Metrics</a> section of this Handbook.</p>
 
 						<hr />
 					</section>
@@ -90,7 +90,7 @@
 
 						<p>In the case where we need to reduce the logotype to just the &quot;W&quot; mark, the height of the title should correspond to the x height of the logotype word - equivalent to a small caps height version of Open Sans Semi-bold - but aligned to the middle axis of the &quot;W&quot; mark. The text size proportion is visually explained in the full horizontal Logotype + Title example&nbsp;bellow:</p>
 
-						<figure class="sample">	
+						<figure class="sample">
 							<img src="images/logo-metrics-title.svg">
 						</figure>
 					</section>
@@ -98,8 +98,8 @@
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
-						<li class="page-links-previous"><a href="index.html">Introduction</a></li>
-						<li class="page-links-next"><a href="colors.html">Colors</a></li>
+						<li class="page-links-previous"><a href="../index.html">Introduction</a></li>
+						<li class="page-links-next"><a href="../colors/">Colors</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
 			</main><!-- #main -->
