--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<link rel="icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" sizes="16x16" />
 
-		<link href='http://fonts.googleapis.com/css?family=Merriweather:700,900|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Merriweather:700|Open+Sans:400italic,700italic,400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 
 	<body>
@@ -28,12 +28,12 @@
 				<button class="menu-toggle">Navigation</button>
 				<ul>
 					<li class="current"><a href="index.html">Introduction</a></li>
-					<li><a href="logo.html">Logotype</a></li>
-					<li><a href="colors.html">Colors</a></li>
-					<li><a href="typography.html">Typography</a></li>
-					<li><a href="icons.html">Iconography</a></li>
-					<li><a href="metrics.html">Metrics</a></li>
-					<li><a href="patterns.html">Patterns</a></li>
+					<li><a href="logotype/">Logotype</a></li>
+					<li><a href="colors/">Colors</a></li>
+					<li><a href="typography/">Typography</a></li>
+					<li><a href="iconography/">Iconography</a></li>
+					<li><a href="metrics/">Metrics</a></li>
+					<li><a href="patterns/">Patterns</a></li>
 				</ul>
 			</nav><!-- #site-navigation -->
 
@@ -49,23 +49,17 @@
 
 					<p>In this guide we'll go through most elements that can be abstracted — like our brand logotype, colors, typography, iconography, and even some practical examples. All that you'll see written here is meant to serve as a guideline. Ultimately you should use your design experience to make decisions, but keeping in mind that there should be concrete reasons to break these rules.</p>
 
-					<p><a href="logo.html">Let's get started!</a><p>
+					<p><a href="logotype/">Let's get started!</a><p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
 					<ul>
-						<li class="page-links-next"><a href="logo.html">Logotype</a></li>
+						<li class="page-links-next"><a href="logotype/">Logotype</a></li>
 					</ul>
 				</nav><!-- #page-navigation -->
 			</main><!-- #main -->
 
 		</div><!-- #content -->
 
-
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-		<script src="js/vendor/rainbow.min.js"></script>
-		<script src="js/main.js"></script>
 	</body>
 </html>
