--- a/colors/index.html
+++ b/colors/index.html
@@ -101,56 +101,86 @@
 						<h2>Grays</h2>
 						<p>Grey, Gray, Cinza, Gris, Nezumi-iro &mdash; they blend! The new incarnation of grays bring a slight blue hue to them, to bring our brand together.</p>
 
-						<section class="swatches col-3">
-							<div class="swatch ultra-light-gray">
+						<section class="swatches col-1">
+							<div class="swatch gray">
 								<ul class="swatch-details">
-									<li><strong>Ultra Light Gray</strong></li>
+									<li><strong>Gray</strong></li>
+									<li><small>text</small></li>
+									<li>#87a6bc</li>
+									<li>rgb(135,166,188)</li>
+								</ul>
+							</div>
+						</section>
+						<section class="swatches col-4">
+							<div class="swatch gray-light">
+								<ul class="swatch-details">
+									<li><strong>Gray-Light</strong></li>
 									<li><small>sidebar background</small></li>
-									<li>#f4f8fa</li>
-									<li>rgb(244,248,250)</li>
+									<li>#f3f6f8</li>
+									<li>rgb(243,246,248)</li>
+								</ul>
+							</div>
+							
+							<div class="swatch gray-lighten-30">
+								<ul class="swatch-details">
+									<li><strong>Gray-Lighten-10</strong></li>
+									<li><small>sidebar background</small></li>
+									<li>#e9eff3</li>
+									<li>rgb(233,239,243)</li>
+								</ul>
+							</div>
+							
+							<div class="swatch gray-lighten-20">
+								<ul class="swatch-details">
+									<li><strong>Gray-Lighten-20</strong></li>
+									<li><small>sidebar background</small></li>
+									<li>#c8d7e1</li>
+									<li>rgb(200,215,225)</li>
 								</ul>
 							</div>
 
-							<div class="swatch light-gray">
+							<div class="swatch gray-lighten-10">
 								<ul class="swatch-details">
-									<li><strong>Light Gray</strong></li>
+									<li><strong>Gray-Lighten-10</strong></li>
 									<li><small>body background</small></li>
-									<li>#e8f0f5</li>
-									<li>rgb(232,240,247)</li>
+									<li>#a8bece</li>
+									<li>rgb(168,190,206)</li>
 								</ul>
 							</div>
 
-							<div class="swatch medium-gray">
+							<div class="swatch gray-darken-10">
 								<ul class="swatch-details">
-									<li><strong>Medium Gray</strong></li>
+									<li><strong>Gray-Darken-10</strong></li>
 									<li><small>shadows and rules</small></li>
-									<li>#d2dee6</li>
-									<li>rgb(210,222,230)</li>
+									<li>#668eaa</li>
+									<li>rgb(102,142,170)</li>
 								</ul>
 							</div>
 
-							<div class="swatch medium-gray-darker">
+							<div class="swatch gray-darken-20">
 								<ul class="swatch-details">
-									<li><strong>Medium Gray Darker</strong></li>
-									<li>#b1c6d4</li>
-									<li>rgb(177,198,212)</li>
+									<li><strong>Gray-Darken-20</strong></li>
+									<li><small>text</small></li>
+									<li>#4f748e</li>
+									<li>rgb(79,116,142)</li>
 								</ul>
 							</div>
 
-							<div class="swatch medium-gray-darkerer">
+							<div class="swatch gray-darken-30">
 								<ul class="swatch-details">
-									<li><strong>Medium Gray Darkerer</strong></li>
-									<li>#90aec2</li>
-									<li>rgb(144,174,194)</li>
+									<li><strong>Gray-Darken-30</strong></li>
+									<li><small>text</small></li>
+									<li>#3d596d</li>
+									<li>rgb(61,89,109)</li>
 								</ul>
 							</div>
 
-							<div class="swatch dark-gray">
+							<div class="swatch gray-dark">
 								<ul class="swatch-details">
-									<li><strong>Dark Gray</strong></li>
-									<li><small>007</small></li>
-									<li>#324155</li>
-									<li>rgb(50,65,85)</li>
+									<li><strong>Gray-Dark</strong></li>
+									<li><small>text</small></li>
+									<li>#2e4453</li>
+									<li>rgb(46,68,83)</li>
 								</ul>
 							</div>
 						</section>
