Cleaning up old text

--- a/colors/index.html
+++ b/colors/index.html
@@ -211,7 +211,7 @@
 
 					<section id="colors-alerts" class="colors-alerts article-section">
 						<h2>Validations and Alerts</h2>
-						<p>These colors are useful for form field validation, alerts, warnings, and pats on the back. Not intended for large blocks of color. Works great with Noticons! Optimized for color blindness.</p>
+						<p>These colors are useful for form field validation, alerts, warnings, and pats on the back. Optimized for color blindness.</p>
 
 						<section class="swatches col-3">
 							<div class="swatch valid-green">
