Adding sass variable names

--- a/colors/index.html
+++ b/colors/index.html
@@ -55,6 +55,7 @@
 									<li><strong>WordPress.com Blue</strong></li>
 									<li>#0087be</li>
 									<li>rgb(0,135,190)</li>
+									<li>$wordpress-blue</li>
 									<!--
 									<li>$wordpress-blue</li>
 									<li>PMS 7460</li>
@@ -76,6 +77,7 @@
 									<li><strong>Light Blue</strong></li>
 									<li>#78dcfa</li>
 									<li>rgb(120,220,250)</li>
+									<li>$light-blue</li>
 								</ul>
 							</div>
 
@@ -84,6 +86,7 @@
 									<li><strong>Medium Blue</strong></li>
 									<li>#00aadc</li>
 									<li>rgba(0,170,220)</li>
+									<li>$medium-blue</li>
 								</ul>
 							</div>
 
@@ -92,6 +95,7 @@
 									<li><strong>Dark Blue</strong></li>
 									<li>#005082</li>
 									<li>rgb(0,80,130)</li>
+									<li>$dark-blue</li>
 								</ul>
 							</div>
 						</section>
@@ -108,79 +112,88 @@
 									<li><small>text</small></li>
 									<li>#87a6bc</li>
 									<li>rgb(135,166,188)</li>
+									<li>$gray</li>
 								</ul>
 							</div>
 						</section>
 						<section class="swatches col-4">
 							<div class="swatch gray-light">
 								<ul class="swatch-details">
-									<li><strong>Gray-Light</strong></li>
+									<li><strong>Gray Light</strong></li>
 									<li><small>sidebar background</small></li>
 									<li>#f3f6f8</li>
 									<li>rgb(243,246,248)</li>
+									<li>$gray-light</li>
 								</ul>
 							</div>
 							
 							<div class="swatch gray-lighten-30">
 								<ul class="swatch-details">
-									<li><strong>Gray-Lighten-10</strong></li>
+									<li><strong>Gray Lighten 30</strong></li>
 									<li><small>sidebar background</small></li>
 									<li>#e9eff3</li>
 									<li>rgb(233,239,243)</li>
+									<li>lighten($gray,30)</li>
 								</ul>
 							</div>
 							
 							<div class="swatch gray-lighten-20">
 								<ul class="swatch-details">
-									<li><strong>Gray-Lighten-20</strong></li>
+									<li><strong>Gray Lighten 20</strong></li>
 									<li><small>sidebar background</small></li>
 									<li>#c8d7e1</li>
 									<li>rgb(200,215,225)</li>
+									<li>lighten($gray,20)</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-lighten-10">
 								<ul class="swatch-details">
-									<li><strong>Gray-Lighten-10</strong></li>
+									<li><strong>Gray Lighten 10</strong></li>
 									<li><small>body background</small></li>
 									<li>#a8bece</li>
 									<li>rgb(168,190,206)</li>
+									<li>lighten($gray,10)</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-10">
 								<ul class="swatch-details">
-									<li><strong>Gray-Darken-10</strong></li>
+									<li><strong>Gray Darken 10</strong></li>
 									<li><small>shadows and rules</small></li>
 									<li>#668eaa</li>
 									<li>rgb(102,142,170)</li>
+									<li>darken($gray,10)</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-20">
 								<ul class="swatch-details">
-									<li><strong>Gray-Darken-20</strong></li>
+									<li><strong>Gray Darken 20</strong></li>
 									<li><small>text</small></li>
 									<li>#4f748e</li>
 									<li>rgb(79,116,142)</li>
+									<li>darken($gray,20)</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-30">
 								<ul class="swatch-details">
-									<li><strong>Gray-Darken-30</strong></li>
+									<li><strong>Gray Darken 30</strong></li>
 									<li><small>text</small></li>
 									<li>#3d596d</li>
 									<li>rgb(61,89,109)</li>
+									<li>darken($gray,30)</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-dark">
 								<ul class="swatch-details">
-									<li><strong>Gray-Dark</strong></li>
+									<li><strong>Gray Dark</strong></li>
 									<li><small>text</small></li>
 									<li>#2e4453</li>
 									<li>rgb(46,68,83)</li>
+									<li>$gray-dark</li>
 								</ul>
 							</div>
 						</section>
@@ -196,6 +209,7 @@
 									<li><strong>Fire Orange</strong></li>
 									<li>#d54e21</li>
 									<li>rgb(213,78,33)</li>
+									<li>$fire-orange</li>
 								</ul>
 							</div>
 
@@ -204,6 +218,7 @@
 									<li><strong>Jazzy Orange</strong></li>
 									<li>#f0821e</li>
 									<li>rgb(240,130,30)</li>
+									<li>$jazzy-orange</li>
 								</ul>
 							</div>
 						</section>
@@ -219,6 +234,7 @@
 									<li><strong>Valid Green</strong></li>
 									<li>#4ab866</li>
 									<li>rgb(74,184,102)</li>
+									<li>$alert-green</li>
 								</ul>
 							</div>
 
@@ -227,6 +243,7 @@
 									<li><strong>Warning Yellow</strong></li>
 									<li>#f0b849</li>
 									<li>rgb(240,184,73)</li>
+									<li>$alert-yellow</li>
 								</ul>
 							</div>
 
@@ -235,6 +252,7 @@
 									<li><strong>Error Red</strong></li>
 									<li>#d94f4f</li>
 									<li>rgb(217,79,79)</li>
+									<li>$alert-red</li>
 								</ul>
 							</div>
 						</section>
