--- a/colors/index.html
+++ b/colors/index.html
@@ -109,7 +109,7 @@
 							<div class="swatch gray">
 								<ul class="swatch-details">
 									<li><strong>Gray</strong></li>
-									<li><small>text</small></li>
+									<!-- <li><small>middle of the road gray</small></li> -->
 									<li>#87a6bc</li>
 									<li>rgb(135,166,188)</li>
 									<li>$gray</li>
@@ -120,7 +120,7 @@
 							<div class="swatch gray-light">
 								<ul class="swatch-details">
 									<li><strong>Gray Light</strong></li>
-									<li><small>sidebar background</small></li>
+									<!-- <li><small>ultra light</small></li> -->
 									<li>#f3f6f8</li>
 									<li>rgb(243,246,248)</li>
 									<li>$gray-light</li>
@@ -130,7 +130,7 @@
 							<div class="swatch gray-lighten-30">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 30</strong></li>
-									<li><small>sidebar background</small></li>
+									<!-- <li><small>page background</small></li> -->
 									<li>#e9eff3</li>
 									<li>rgb(233,239,243)</li>
 									<li>lighten($gray,30)</li>
@@ -140,7 +140,7 @@
 							<div class="swatch gray-lighten-20">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 20</strong></li>
-									<li><small>sidebar background</small></li>
+									<!-- <li><small>sidebar background</small></li> -->
 									<li>#c8d7e1</li>
 									<li>rgb(200,215,225)</li>
 									<li>lighten($gray,20)</li>
@@ -150,7 +150,7 @@
 							<div class="swatch gray-lighten-10">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 10</strong></li>
-									<li><small>body background</small></li>
+									<!-- <li><small>body background</small></li> -->
 									<li>#a8bece</li>
 									<li>rgb(168,190,206)</li>
 									<li>lighten($gray,10)</li>
@@ -160,7 +160,7 @@
 							<div class="swatch gray-darken-10">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 10</strong></li>
-									<li><small>shadows and rules</small></li>
+									<!-- <li><small>shadows and rules</small></li> -->
 									<li>#668eaa</li>
 									<li>rgb(102,142,170)</li>
 									<li>darken($gray,10)</li>
@@ -170,7 +170,7 @@
 							<div class="swatch gray-darken-20">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 20</strong></li>
-									<li><small>text</small></li>
+									<!-- <li><small>text</small></li> -->
 									<li>#4f748e</li>
 									<li>rgb(79,116,142)</li>
 									<li>darken($gray,20)</li>
@@ -180,7 +180,7 @@
 							<div class="swatch gray-darken-30">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 30</strong></li>
-									<li><small>text</small></li>
+									<!-- <li><small>text</small></li> -->
 									<li>#3d596d</li>
 									<li>rgb(61,89,109)</li>
 									<li>darken($gray,30)</li>
@@ -190,7 +190,7 @@
 							<div class="swatch gray-dark">
 								<ul class="swatch-details">
 									<li><strong>Gray Dark</strong></li>
-									<li><small>text</small></li>
+									<!-- <li><small>text</small></li> -->
 									<li>#2e4453</li>
 									<li>rgb(46,68,83)</li>
 									<li>$gray-dark</li>
