--- a/iconography/index.html
+++ b/iconography/index.html
@@ -50,7 +50,7 @@
 					<ul>
 						<li><a href="http://wordpress.com/i/noticons/example.html">Noticons</a> (from <em>&ldquo;notification icons&rdquo;</em>) is our WordPress.com icon font. It contains every icon &ldquo;Genericons&rdquo; has, plus some that are specific to WordPress.com. You can use Genericons for themes and other projects. <strong>(Please do not use Noticons outside of their intended 16px font-size or 2x multiples thereof (32px, 64px). Even fonts look fuzzy outside of their pixel grid.)</strong></li>
 						<li><a href="http://genericons.com">Genericons</a> is an Open Source icon font. Most of it is included in Noticons. Useful for themes and non-WordPress.com stuff.</li>
-						<li><a href="http://melchoyce.github.io/dashicons/">Dashicons</a> is the official icon font of the WordPress admin as of 3.8.</li>
+						<li><a href="https://developer.wordpress.org/resource/dashicons/">Dashicons</a> is the official icon font of the WordPress admin. It should only be used within /wp-admin/.</li>
 					</ul>
 
 					<p>If you&rsquo;d like to join the icon revolution, head over to the <a href="https://github.com/Automattic/Gridicons">Gridicons GitHub repo</a>, where the future of the WordPress.com icons is being crafted.</p>
